Work on media query for smaller screens and fixing layout issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -415,14 +415,8 @@ footer p {
     
 }
 
-.mind-graphic {
-    float: right;
-    margin-top: -250px;
-    margin-right: 30px;
-    width: 220px;
-    height: 220px;
 
-}
+
 .spirit {
     /*background-color:deeppink;*/
     background-color: white;
@@ -444,11 +438,7 @@ footer p {
     padding: 10px;
 }
 
-.spirit-technique p {
-    font-size: 120%;
-    font-family: 'Roboto', 'sans-serif';
-    text-align: justify;
-}
+
 
 .spirit .shapely-body  {
   
@@ -483,14 +473,15 @@ footer p {
     
 }
 
-.spirit-graphic {
+/*.spirit-graphic {
     float: right;
     margin-top: -250px;
     margin-right: 30px;
     width: 200px;
     height: 200px;
 
-}
+}*/
+
 .ornate {
     clear: both;
     text-align: Center;
@@ -505,7 +496,7 @@ footer p {
     border-style: groove;
     border-width: 10px;
     border-color: #CC63FF;
-    background-color:fuchsia;
+    /*background-color:fuchsia;*/
     text-transform: uppercase;
  
 }
@@ -545,7 +536,7 @@ footer p {
     margin-right: auto;
     font-family: 'Roboto', 'sans-serif';
     font-size: 120%;
-    border: 1px solid black;
+    
     background-color: white;
     padding: 10px;
     line-height: 1.5;
@@ -553,15 +544,12 @@ footer p {
 }
 
 .resources{
-    height: 600px;
+    height: 480px;
     
 }
 
 
-th, td {
-    border: 1px solid;
-    padding: 5px;
-  }
+
 
 table {
     background-color: white;
@@ -570,10 +558,7 @@ table {
     margin-right: auto;
   }
   
-  th {
-    height: 80px;
-    
-  }
+  
 
   th, td {
       
@@ -582,6 +567,9 @@ table {
       font-size: 120%;
       line-height: 1.5;
       font-family: 'Roboto', 'sans-serif';
+      border: 1px solid;
+      padding: 5px;
+      
     
       
   }
@@ -661,7 +649,7 @@ input[type=text]:focus, input[type=password]:focus {
     width: 40%;
     display: block;
     background-color: white;
-    border: 5px solid rgba(126, 43, 182, 0.6);
+   
     margin: 75px;
     padding: 10px;
     line-height: 1.5;
@@ -695,7 +683,7 @@ input[type=text]:focus, input[type=password]:focus {
     
     .resources {
         width: 100%;
-        height: 1200px;
+       
     }
 
     th, td {
@@ -882,10 +870,7 @@ input[type=text]:focus, input[type=password]:focus {
     
     }
 
-    .body-graphic {
-        width: 90%;
-        margin-top: -10px;
-    }
+    
 
     .resources {
         width: 100%;
@@ -1146,23 +1131,7 @@ input[type=text]:focus, input[type=password]:focus {
     
     }
 
-    .body-graphic  {
-        width: 100%;
-        display: block;
-        margin: auto;
-        
-        
-    }
-
-    .mind-graphic {
-        clear: both;
-        display: block;
-        margin: auto;
-        margin-bottom: 10px;
-        width: 150px;
-        height: 150px;  
-
-    }
+     
 
     .next-woman {
         display: block;
@@ -1187,10 +1156,6 @@ input[type=text]:focus, input[type=password]:focus {
         color: black;
     }
     
-    .resources{
-        height: 600px;
-        background-color: pink;
-    }
     
     
     th, td {
@@ -1205,11 +1170,7 @@ input[type=text]:focus, input[type=password]:focus {
         margin-right: auto;
       }
       
-      th {
-        height: 80px;
         
-      }
-    
       
     
       th, td {
@@ -1228,7 +1189,7 @@ input[type=text]:focus, input[type=password]:focus {
     /* Form */
     
     .form-section {   
-        margin-top: 20px; 
+        margin-top: 0px; 
         background-color:rgba(126, 43, 182, 0.6);
         height: 600px;
         margin-bottom: 20px;
@@ -1241,7 +1202,7 @@ input[type=text]:focus, input[type=password]:focus {
         background-color: rgba(126, 43, 182, 0.6);
         width: 600px;
         padding: 20px;  
-        float: right;    
+        float: left;    
     }
     
     .workshop-signup-form h2 {
@@ -1294,11 +1255,10 @@ input[type=text]:focus, input[type=password]:focus {
     }
     
     .workshop-news {
-        float: left;
+        float: right;
         width: 40%;
         display: block;
         background-color: white;
-        border: 5px solid rgba(126, 43, 182, 0.6);
         margin: 75px;
         padding: 10px;
         line-height: 1.5;
@@ -1365,7 +1325,6 @@ input[type=text]:focus, input[type=password]:focus {
         margin-left: auto;
         margin-right: auto;
         padding: 5%;
-        border: 2px solid rgb(95, 11, 145);
         
     }
 
@@ -1382,7 +1341,7 @@ input[type=text]:focus, input[type=password]:focus {
     }
     
     .resources {
-        height: 820px;
+        margin-top: 20px;
         margin-bottom: 20px;
     }
 
@@ -1393,3 +1352,27 @@ input[type=text]:focus, input[type=password]:focus {
     }
 }
 
+/* For ultra small screen sizes 400px and lower */
+@media screen and (max-width: 400px) {
+    #menu li {
+        margin: 0 3px 0 3px;
+        padding: 0 3px 0 3px;
+        font-size: 0.9rem;
+    }
+
+    #menu {
+        line-height: 23px;
+    }
+
+    .workshop-signup-form {
+        width: 85%;
+    }
+
+    input[type=submit] {
+        margin-bottom: 0.5rem;
+    }
+
+    .next-woman {
+        width: 70%;
+    }
+}
